# langfuse-rs

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.md  deny.toml
.github/workflows/: ci.yml  release.yml  security.yml
crates/langfuse/: Cargo.toml  LICENSE-MIT
crates/langfuse-core/: Cargo.toml  build.rs
crates/langfuse-core/src/: config.rs  error.rs  lib.rs
crates/langfuse-core/src/api/: mod.rs
crates/langfuse-core/src/types/: evaluation.rs  media.rs  mod.rs  observation.rs  prompt.rs  score.rs
crates/langfuse-core/tests/: config_test.rs  types_test.rs
crates/langfuse-macros/: Cargo.toml
crates/langfuse-macros/src/: lib.rs
crates/langfuse-openai/: Cargo.toml
crates/langfuse-openai/examples/: openai_integration.rs
crates/langfuse-openai/src/: lib.rs  parser.rs  wrapper.rs
crates/langfuse-openai/tests/: openai_test.rs
crates/langfuse/examples/: advanced_features.rs  basic_tracing.rs  experiment.rs  openai_integration.rs  prompt_management.rs
crates/langfuse/src/: client.rs  http.rs  lib.rs
crates/langfuse/src/datasets/: evaluator.rs  experiment.rs  manager.rs  mod.rs  types.rs
crates/langfuse/src/media/: manager.rs  mod.rs  types.rs
crates/langfuse/src/prompts/: cache.rs  chat.rs  manager.rs  mod.rs  text.rs  types.rs
crates/langfuse/src/scoring/: manager.rs  mod.rs  queue.rs
crates/langfuse/src/tracing/: AGENTS.md  attributes.rs  context.rs  context_apis.rs  embedding.rs  exporter.rs  generation.rs  mod.rs  observe.rs  span.rs  stream_wrapper.rs
crates/langfuse/tests/: advanced_config_test.rs  baggage_propagation_test.rs  client_test.rs  context_apis_test.rs  datasets_test.rs  evaluation_test.rs  event_test.rs  exporter_test.rs  lifecycle_test.rs  media_test.rs  observation_types_test.rs  observe_test.rs  prompt_crud_test.rs  prompts_test.rs  score_tracing_test.rs  scoring_test.rs  span_scoring_test.rs  span_test.rs  stream_observe_test.rs
scripts/: extract-changelog-release.py
supply-chain/: config.toml
