[package]
name = "langfuse-openai"
version = "0.1.1"
description = "OpenAI integration for the Langfuse SDK"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/langfuse-openai"
readme = "../../README.md"
keywords = ["langfuse", "openai", "llm", "integration", "tracing"]
categories = ["api-bindings"]
exclude = [".github/", ".sisyphus/"]

[dependencies]
langfuse = { package = "langfuse-sdk", path = "../langfuse", version = "0.1.1" }
langfuse-core = { version = "0.1.1", path = "../langfuse-core" }
async-openai = { version = "0.33", features = ["chat-completion", "embedding"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
chrono.workspace = true
futures.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
